--- a/0x02-CSS_advanced/styles/5-style.css
+++ b/0x02-CSS_advanced/styles/5-style.css
@@ -7,12 +7,12 @@
     --font-size-xx-large: 4.8rem;
 }
 
-/* Set html font size to 62.5% */
+/* Simplified font size declaration for html */
 html {
     font-size: 62.5%;
 }
 
-/* Set body font size to font-size-medium */
+/* Simplified font size declaration for body */
 body {
     font-size: var(--font-size-medium);
 }
